--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
                 </div>
             </div>
         </section>
+        <div class="modal-overlay">
+            <div class="modal-container">
+                <p class="modal-header">Delete Comment</p>
+                <p class="modal-text">
+                    Are you sure you want to delete this comment ? This will
+                    remove the comment and can be undone.
+                </p>
+                <div class="modal-btn">
+                    <button class="cancel">NO, CANCEL</button>
+                    <button class="delete">YES, DELETE</button>
+                </div>
+            </div>
+        </div>
         
         
         <script src="app.js" async defer></script>
