--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 
                 <!-- REPLY--2 FOR USER -->
-                <div class="posted-reply-container">
+                <!-- <div class="posted-reply-container">
                     <div class="msg-content posted-reply">
                         <div class="comment-sec">
                             <div class="text-sec">
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <!-- COMMENT-REPLY -->
                 <!-- <div class="reply-content">
