finished edit func

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <div class="text-sec">
                                 <div class="profile">
                                     <div class="comment-pic"><img src="./images/avatars/image-amyrobson.png" alt="?"></div>
-                                    <p class="user-name">Theonlyabdull</p>
+                                    <p class="user-name">Theabdull</p>
                                     <p class="date-posted">1 month ago</p>
                                     <div class="reply"><img src="./images/icon-reply.svg" alt="reply"><span class="reply-text">Reply</span></div>
                                 </div>
@@ -153,11 +153,11 @@
                                 </div>
                             </div>
                             <div class="comment-text-div">
-                                <p class="comment-text"> 
-                                    Impressive! Though it seems the drag feature could be improved. 
-                                    But overall it looks incredible. You've nailed the design and the
-                                    responsiveness at various breakpoints works really well.
-                                </p>
+                                <textarea class="edit-textarea">Impressive! Though it seems the drag feature could be improved.But overall it looks incredible. You've nailed the design and the responsiveness at various breakpoints works really well.
+                                </textarea>
+                                
+                                <button class="reply-btn update-btn">UPDATE</button>
+                               
                             </div>
                         </div>
                         <div class="rating-sec">
