finised the name and rating

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="text-sec">
                             <div class="profile">
                                 <div class="comment-pic"><img src="./images/avatars/image-amyrobson.png" alt="?"></div>
-                                <p class="user-name">Theonlyabdull</p>
+                                <p class="user-name">amyrobson</p>
                                 <p class="date-posted">1 month ago</p>
                                 <div class="reply"><img src="./images/icon-reply.svg" alt="reply"><span class="reply-text">Reply</span></div>
                             </div>
@@ -44,22 +44,22 @@
                     <div class="comment-sec">
                         <div class="text-sec">
                             <div class="profile">
-                                <div class="comment-pic"><img src="./images/avatars/image-amyrobson.png" alt="?"></div>
-                                <p class="user-name">Theonlyabdull</p>
-                                <p class="date-posted">1 month ago</p>
+                                <div class="comment-pic"><img src="./images/avatars/image-maxblagun.png" alt="?"></div>
+                                <p class="user-name">maxblagun</p>
+                                <p class="date-posted">2 month ago</p>
                                 <div class="reply"><img src="./images/icon-reply.svg" alt="reply"><span class="reply-text">Reply</span></div>
                             </div>
                             <div class="comment-text-div">
                                 <p class="comment-text"> 
-                                    Impressive! Though it seems the drag feature could be improved. 
-                                    But overall it looks incredible. You've nailed the design and the
-                                    responsiveness at various breakpoints works really well.
+                                    Woah, your project looks awesome! How long have you been coding for? 
+                                    I'm still new, but think I want to dive into React as well soon. 
+                                    Perhaps you can give me an insight on where I can learn React? Thanks!"
                                 </p>
                             </div>
                         </div>
                         <div class="rating-sec">
                             <div class="plus"><img src="./images/icon-plus.svg" alt="+"></div>
-                            <p class="rating">14</p>
+                            <p class="rating">5</p>
                             <div class="minus"><img src="./images/icon-minus.svg" alt="-"></div>
                         </div>
                     </div>
@@ -71,22 +71,22 @@
                     <div class="comment-sec">
                         <div class="text-sec">
                             <div class="profile">
-                                <div class="comment-pic"><img src="./images/avatars/image-amyrobson.png" alt="?"></div>
-                                <p class="user-name">Theabdull</p>
-                                <p class="date-posted">1 month ago</p>
+                                <div class="comment-pic"><img src="./images/avatars/image-ramsesmiron.png" alt="?"></div>
+                                <p class="user-name">ramsesmiron</p>
+                                <p class="date-posted">1 week ago</p>
                                 <div class="reply"><img src="./images/icon-reply.svg" alt="reply"><span class="reply-text">Reply</span></div>
                             </div>
                             <div class="comment-text-div">
                                 <p class="comment-text"> 
-                                    Impressive! Though it seems the drag feature could be improved. 
-                                    But overall it looks incredible. You've nailed the design and the
-                                    responsiveness at various breakpoints works really well.
+                                    <span class='replying-name'>@maxblagun</span> If you're still new, I'd recommend focusing on the fundamentals of 
+                                    HTML, CSS, and JS before considering React. 
+                                    It's very tempting to jump ahead but lay a solid foundation first.
                                 </p>
                             </div>
                         </div>
                         <div class="rating-sec">
                             <div class="plus"><img src="./images/icon-plus.svg" alt="+"></div>
-                            <p class="rating">14</p>
+                            <p class="rating">2</p>
                             <div class="minus"><img src="./images/icon-minus.svg" alt="-"></div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                     <textarea class="post-txt-area" name="" id="sendMsg" placeholder="Add a comment..."></textarea>
                 </div>
                 <div class="reply-pic">
-                    <img src="./images/avatars/image-maxblagun.png" alt="?">
+                    <img src="./images/avatars/image-juliusomo.png" alt="?">
                 </div>
                 <div class="reply-btn-container">
                     <button id="send" class="reply-btn">SEND</button>
